--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  margin: 2 auto;
+  /* padding: 1rem; */
+  text-align: left;
+  line-height: normal;
 }
 
 .logo {
